<resources>
    <string name="app_name">PairProgrammingApp</string>
    <string name="project_page_heading">Your Projects:</string>
    <string name="show_project1">Project 1</string>
    <string name="show_project2">Project 2</string>
    <string name="show_project3">Project 3</string>
    <string name="show_project4">Project 4</string>
    <string name="show_project5">Project 5</string>
    <string name="action_settings">Settings</string>
    <string name="action_save">Save</string>
    <string name="action_logout">Log out</string>
    <string name="title_activity_view_notes">Notes</string>
    <string name="title_activity_edit_note">Edit Note</string>
    <string name="title_activity_test_cases">Test cases</string>
    <string name="title_activity_new_test_case">NewTestCaseActivity</string>
    <string name="title_activity_display_project">DisplayProjectActivity</string>
    <string name="title_activity_display_units">DisplayUnitsActivity</string>
    <string name="title_activity_Timer">timer</string>
    <string name="title_activity_pair_programming">Pair programming</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_work_session">WorkSessionActivity</string>

    <string-array name="session_tabs_names">
        <item>Test Cases</item>
        <item>Notes</item>
        <item>Timer</item>
    </string-array>
</resources>
