<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/project_content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="se.chalmers.agile.pairprogrammingapp.DisplayProjectActivity"
    tools:showIn="@layout/activity_display_project">

    <TextView
        android:id="@+id/project_heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/project_name1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/project_heading"
        android:clickable="true"
        android:onClick="showProject1"
        android:paddingLeft="10dp"
        android:text="@string/show_project1"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/project_name2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/project_name1"
        android:clickable="true"
        android:onClick="showProject2"
        android:paddingLeft="10dp"
        android:text="@string/show_project2"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/project_name3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/project_name2"
        android:clickable="true"
        android:onClick="showProject3"
        android:paddingLeft="10dp"
        android:text="@string/show_project3"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/project_name4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/project_name3"
        android:clickable="true"
        android:onClick="showProject4"
        android:paddingLeft="10dp"
        android:text="@string/show_project4"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/project_name5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/project_name4"
        android:clickable="true"
        android:onClick="showProject5"
        android:paddingLeft="10dp"
        android:text="@string/show_project5"
        android:textSize="20sp" />

</RelativeLayout>
